# aoc2023

./: CMakeLists.txt  exec.hpp  main.hpp  template.in
1/: solution.cpp
10/: solution.cpp
11/: solution.cpp
12/: solution.cpp  solution.py
13/: solution.cpp
14/: solution.cpp
15/: solution.cpp
16/: solution.cpp
17/: solution.cpp
18/: solution.cpp
19/: solution.cpp
2/: solution.cpp
20/: solution.cpp
21/: solution.cpp
22/: solution.cpp  solution.py
23/: solution.cpp
24/: solution.cpp
25/: solution.cpp
3/: solution.cpp
4/: solution.cpp
5/: solution.cpp
6/: solution.cpp  solution.py
7/: solution.cpp
8/: solution.cpp
9/: solution.cpp
