cmake_minimum_required(VERSION 3.19)
project (aoc2021)

find_package(fmt)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(6 6/solution.cpp)
target_compile_definitions(6 PRIVATE -DDAY_PATH="../6/data.in")
target_link_libraries(6 fmt::fmt)

function(aoc_day_solution day_id)
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${day_id}/solution.cpp")
    else()
        file(MAKE_DIRECTORY ${day_id})
        file(TOUCH  ${CMAKE_CURRENT_SOURCE_DIR}/${day_id}/data.in)
        configure_file(template.in ${CMAKE_CURRENT_SOURCE_DIR}/${day_id}/solution.cpp COPYONLY)
    endif()
    add_executable(${day_id} ${CMAKE_CURRENT_SOURCE_DIR}/${day_id}/solution.cpp)
    target_compile_definitions(${day_id} PUBLIC -DDAY_PATH="../${day_id}/data.in")
    target_link_libraries(${day_id} fmt::fmt)
endfunction()

aoc_day_solution(7)
aoc_day_solution(8)
aoc_day_solution(9)
aoc_day_solution(10)
aoc_day_solution(11)
aoc_day_solution(12)
aoc_day_solution(13)
aoc_day_solution(14)
aoc_day_solution(15)
aoc_day_solution(16)
aoc_day_solution(17)
aoc_day_solution(18)
aoc_day_solution(19)
aoc_day_solution(20)
aoc_day_solution(21)
aoc_day_solution(22)
aoc_day_solution(23)
aoc_day_solution(24)
aoc_day_solution(25)